--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
     implementation 'commons-dbutils:commons-dbutils:1.7'
     implementation 'mysql:mysql-connector-java:8.0.18'
+    implementation 'org.postgresql:postgresql:42.2.0'
 
     testImplementation 'io.qameta.allure:allure-selenide:2.13.0'
 }
